[project]
name = "ramputils"
version = "0.0.1"
authors = [
  { name="Aditya Raj", email="ar915888@gmail.com" },
]
description = "A small demo utiltiy"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
